Closed
Bug 1201660
Opened 10 years ago
Closed 10 years ago
Flash plugin flickers. And the flicker remains for a while after closing the tab
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(e10s?, firefox43 fixed)
RESOLVED
FIXED
mozilla43
People
(Reporter: alice0775, Assigned: jimm)
References
Details
Attachments
(2 files)
|
1.65 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
|
2.96 KB,
patch
|
Details | Diff | Splinter Review |
Build Identifier:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b4711fa5f7348a391f19fbab240c16339d3001b1
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0 ID:20150903080648
After landing Bug 1137944,
Flash plugin flickers. And the flicker remains for a while after closing the tab
Steps To Reproduce:
1. Open about:home in tab[1]
2. Open new tab[2](Ctrl+T) and open attachment 8650900 [details] of Bug 1196539
--- observe the Flash plugin flickers
3. Close tab[2]
--- observe the flicker remains for a while
Actual Results:
Flash plugin flickers.
And the flicker remains for a while after closing the tab.
Expected Results:
Flash plugin should playback without flicker.
The Flash plugin should be removed immediately after closing the tab.
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=174ee19829ecbd27412eb58fc808ef889fa34665&tochange=b4711fa5f734
Triggered by Bug 1137944
Updated•10 years ago
|
tracking-e10s:
--- → ?
Flags: needinfo?(jmathies)
| Assignee | ||
Comment 1•10 years ago
|
||
This is weird, the only page I've seen this reproduce with is about:home. Normal web pages, about:blank, about:newtab don't appear to reproduce. When it reproduces I see layer tree updates coming in for both tabs at the same time.
Flags: needinfo?(jmathies)
| Assignee | ||
Comment 2•10 years ago
|
||
Seems to be triggered by the blinking caret in about:home.
| Assignee | ||
Comment 3•10 years ago
|
||
I've tracked this down to a bug I introduced in cset 0325cf8f3cda. I'm going to try to add a test for this if I can too. Working on this now.
| Assignee | ||
Comment 4•10 years ago
|
||
We can't hide all plugins for a window, we have to restrict it to the list of plugins that are falling into a background tab.
Assignee: nobody → jmathies
Attachment #8657241 -
Flags: review?(matt.woodrow)
Updated•10 years ago
|
Attachment #8657241 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 5•10 years ago
|
||
A test that detects this. Unfortunately it's hitting bug 1196539, which was waiting on the landings in bug 1137944. I'll take a look at that next now that I have the routines I need.
| Assignee | ||
Comment 7•10 years ago
|
||
(In reply to Jim Mathies [:jimm] from comment #5)
> Created attachment 8657308 [details] [diff] [review]
> spurious paint test
>
> A test that detects this. Unfortunately it's hitting bug 1196539, which was
> waiting on the landings in bug 1137944. I'll take a look at that next now
> that I have the routines I need.
I'll post this for landing in bug 1196539.
Comment 8•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Updated•10 years ago
|
QA Whiteboard: [good first verify]
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•